LoadBalancer/internal-ingress-auto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress-auto
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.allow-http: "true"
spec:  
  rules:
  - host: "*.internal.gke.com"
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
